# Endocenter

./: .env.example  .gitignore  Makefile  README.md  install_gpu_stack.sh  pyproject.toml  structure.sh
alembic/: env.py
alembic/versions/: 45946d541c40_initial_schema_clean.py  fdd1ed4eaa0a_initial_migration_with_fixed_.py
config/: development.yaml  production.yaml
infrastructure/docker/: docker-compose.dev.yml
requirements/: base.txt  dev.txt  gpu.txt  prod.txt
scripts/: alembic_helper.sh  setup_database.sh  test_database.py  test_postgres.py
src/endocenter/: config.py
src/endocenter/db/: database.py  models.py  models.py.backup  session.py
src/endocenter/rag/embeddings/: batch_processor.py  generator.py
src/endocenter/rag/preprocessing/: chunker.py  document_loader.py  pdf_processor.py  text_cleaner.py
src/endocenter/rag/retrieval/: faiss_index.py  retriever.py
