[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endocenter-mlops"
version = "1.0.0"
description = "EndoCenter MLOps - GPU-accelerated endocrinology diagnosis system"
authors = [
    {name = "Jose Romo", email = "jose@endocenter.com"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "faiss-gpu>=1.7.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "PyMuPDF>=1.23.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.23",
    "loguru>=0.7.2",
    "numpy>=1.21.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

gpu = [
    "nvidia-ml-py>=12.535.0",
    "gpustat>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/joseromo/endocenter-mlops"
Repository = "https://github.com/joseromo/endocenter-mlops.git"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
